frontend/test/should_pass/compiled_multi_rule_query_filter.grg
match class mc
{
	def var i:int;
} \ orderDescendingBy<i>

test s implements mc
{
---
	def var i:int;
}

test t implements mc
{
---
	def var i:int;
}

rule r
{
	modify {
	---
		exec( { emit([?[s,t]\mc.orderDescendingBy<i>\<class mc>]) } );
	}
}
