frontend/test/should_fail/same_auto_generated_match_class_filter_exists.grg
match class Foo
{
	def var i:int;
} \ orderAscendingBy<i>, orderAscendingBy<i>

test foo implements Foo
{
	def var i:int;
}